# FastDeploy

./: .gitignore  CMakeLists.txt  FastDeploy.cmake.in  README.md
benchmark/cpp/: README.md  option.h
benchmark/paddlex/: README.md
benchmark/python/: benchmark_ernie_seq_cls.py  benchmark_ppcls.py  benchmark_ppdet.py  benchmark_ppocr.py  benchmark_ppseg.py  benchmark_uie.py  benchmark_yolo.py
c_api/fastdeploy_capi/runtime/: runtime_option.cc  runtime_option.h
cmake/: check.cmake  config_cpack.cmake  cuda.cmake  cvcuda.cmake  onnxruntime.cmake  paddle_inference.cmake  poros.cmake  summary.cmake  timvx.cmake
csharp/fastdeploy/: runtime_option.cs
docs/cn/build_and_install/: README.md  gpu.md  kunlunxin.md
docs/cn/faq/: build_on_win_with_gui.md  develop_a_new_model.md  how_to_change_backend.md  tensorrt_tricks.md  use_sdk_on_windows.md  use_sdk_on_windows_build.md
docs/en/build_and_install/: README.md  gpu.md  kunlunxin.md
docs/en/faq/: build_on_win_with_gui.md  develop_a_new_model.md  how_to_change_backend.md  tensorrt_tricks.md  use_sdk_on_windows.md
examples/application/go/ppyoloe/: infer.go
examples/application/go/yolov5/: infer.go
examples/application/go/yolov8/: infer.go
examples/application/js/: WebDemo.md  WebDemo_CN.md
examples/application/js/converter/: DEVELOPMENT.md  DEVELOPMENT_CN.md  README.md  README_CN.md  convertModel.py  convertToPaddleJSModel.py
examples/application/rust/ppyoloe/src/: main.rs
examples/application/rust/yolov5/src/: main.rs
examples/application/rust/yolov8/src/: main.rs
examples/multimodal/stable_diffusion/: infer.py
examples/multimodal/stable_diffusion/cpp/: main.cc
examples/runtime/cpp/: infer_onnx_onnxruntime.cc  infer_onnx_tensorrt.cc  infer_paddle_onnxruntime.cc  infer_paddle_paddle_inference_trt.cc  infer_paddle_tensorrt.cc  infer_torchscript_poros.cc
examples/runtime/python/: infer_onnx_onnxruntime.py  infer_onnx_tensorrt.py  infer_paddle_onnxruntime.py  infer_paddle_paddle_inference.py  infer_paddle_tensorrt.py  infer_torchscript_poros.py
examples/text/ernie-3.0/cpp/: seq_cls_infer.cc
examples/text/ernie-3.0/python/: seq_cls_infer.py
examples/text/uie/cpp/: infer.cc
examples/text/uie/python/: infer.py
examples/vision/classification/resnet/cpp/: infer.cc
examples/vision/classification/resnet/python/: infer.py
examples/vision/detection/yolov5/c/: infer.c  (+2 more)
fastdeploy/: fastdeploy_model.cc  fastdeploy_model.h
fastdeploy/benchmark/: utils.cc
fastdeploy/core/: allocate.cc  allocate.h  config.h  config.h.in  fd_tensor.cc  fd_tensor.h
fastdeploy/encryption/util/src/: io_utils.cc
fastdeploy/function/: cuda_cast.cu
fastdeploy/pybind/: fd_tensor.cc  runtime.cc
fastdeploy/runtime/: enum_variables.cc  enum_variables.h  option_pybind.cc  runtime_option.cc  runtime_option.h
fastdeploy/runtime/backends/lite/: lite_backend.cc
fastdeploy/runtime/backends/ort/: ort_backend.cc  ort_backend.h  utils.cc  utils.h
fastdeploy/runtime/backends/paddle/: paddle_backend.cc  util.cc
fastdeploy/runtime/backends/poros/: poros_backend.cc  poros_backend.h  utils.cc
fastdeploy/runtime/backends/tensorrt/: trt_backend.cc
fastdeploy/utils/: utils.cc  utils.h
fastdeploy/vision/classification/ppcls/: model.cc
fastdeploy/vision/classification/ppshitu/: ppshituv2_rec.cc
fastdeploy/vision/common/image_decoder/: nvjpeg_decoder.cc
fastdeploy/vision/common/processors/: base.cc  base.h  cast.cc  center_crop.cc  cvcuda_utils.cc  hwc2chw.cc  manager.cc  manager.h  mat.cc  mat.h  mat_batch.cc  mat_batch.h  normalize.cu  normalize.h  normalize_and_permute.cu  normalize_and_permute.h  pad.cc  pad_to_size.cc  resize.cc  resize_by_short.cc  stride_pad.cc
fastdeploy/vision/detection/contrib/: yolov5lite.cc  yolov6.cc  yolov7end2end_trt.cc
fastdeploy/vision/ocr/ppocr/: structurev2_ser_vi_layoutxlm.cc
fastdeploy/vision/segmentation/ppseg/: model.cc
fastdeploy/vision/utils/: yolo_preprocess.cu
llm/server/server/engine/: infer.py
poros/poros/compile/: compile.cpp  graph_segment.cpp
poros/poros/util/: test_util.cpp
poros/python/poros/csrc/: poros_py.cpp
poros/tools/: main.cpp
python/: setup.py
python/fastdeploy/: __init__.py  c_lib_wrap.py.in  runtime.py
python/scripts/: build_gpu.sh
scripts/linux/: build_linux_x86_64_cpp_cpu.sh  build_linux_x86_64_cpp_cpu_with_benchmark.sh  build_linux_x86_64_cpp_gpu.sh  build_linux_x86_64_cpp_gpu_encrypt_runtime.sh  build_linux_x86_64_cpp_gpu_with_benchmark.sh
serving/docs/EN/: compile_without_docker_centos-en.md
serving/docs/zh_CN/: compile_without_docker_centos.md
serving/scripts/: build.sh  build_fd_cuda_11_2.sh  build_fd_cuda_11_2_trt_8_5_paddle_2_4_2.sh  build_fd_ipu.sh  build_fd_xpu.sh  build_fd_xpu_encrypt_auth.sh
serving/src/: fastdeploy_runtime.cc
streamer/src/gstreamer/: utils.cc
tests/acc_eval/classification/: eval.py
tests/acc_eval/detection/: eval_faster_rcnn.py  eval_mask_rcnn.py  eval_picodet.py  eval_ppyolo.py  eval_ppyoloe.py  eval_ssd.py  eval_yolov3.py  eval_yolov5.py  eval_yolov6.py  eval_yolox.py
tests/acc_eval/ppocr/: eval_ppocrv2.py  eval_ppocrv3.py
tests/acc_eval/segmentation/: eval.py
tests/models/: test_quantize_diff.py
tests/release_task/: infer_ppyoloe.cc  infer_ppyoloe.py
tutorials/multi_thread/cpp/pipeline/: multi_thread_ocr.cc
tutorials/multi_thread/cpp/single_model/: multi_thread.cc
tutorials/multi_thread/python/pipeline/: multi_thread_process_ocr.py
tutorials/multi_thread/python/single_model/: multi_thread_process.py
(+199 files in other folders)
